# a-stack-of-dishes

./: CMakeLists.txt  main.cpp
src/: dish.hpp  stack.cpp  stack.hpp
tests/: dish_stack_test.cpp
